--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ tee-dev-sgx_2.10:
     tags:
         - shell115
     script:
-        - docker pull ${REPO}:sgx-2.10
+        - docker pull aistcpsec/tee-distro-dev:x64-20.04 
         - docker build --build-arg VERSION=2.10 --build-arg DEBUG_DATE=$(date +%s) --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:sgx-2.10 ./sgx/2.10
         - docker push ${REPO}:sgx-2.10
 
@@ -16,7 +16,7 @@ tee-dev-optee_3.9.0:
     tags:
         - shell117
     script:
-        - docker pull ${REPO}:optee-3.9.0
+        - docker pull aistcpsec/tee-distro-dev:arm64-20.04
         - docker build --build-arg VERSION=3.9.0 --build-arg DEBUG_DATE=$(date +%s) --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:optee-3.9.0 ./optee/3.9.0
         - docker push ${REPO}:optee-3.9.0
 
@@ -24,7 +24,7 @@ tee-dev-optee_3.10.0:
     tags:
         - shell121
     script:
-        - docker pull ${REPO}:optee-3.10.0 
+        - docker pull aistcpsec/tee-distro-dev:arm64-20.04 
         - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:optee-3.10.0 ./optee/3.10.0
         - docker push ${REPO}:optee-3.10.0
 
@@ -32,7 +32,7 @@ tee-dev-keystone_1.0.0:
     tags:
         - shell121
     script:
-        - docker pull ${REPO}:keystone-1.0.0
+        - docker pull aistcpsec/tee-distro-dev:riscv-20.04
         - docker build --build-arg VERSION=v1.0.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:keystone-1.0.0 ./keystone/1.0.0
         - docker push ${REPO}:keystone-1.0.0
 
