Modified the Optee dockerfile to reduce the size of image

--- a/optee/3.10.0/Dockerfile
+++ b/optee/3.10.0/Dockerfile
@@ -49,8 +49,16 @@ USER build-user
 # set the env variables
 ENV OPTEE_DIR=${USER_DIR}/optee
 
-#copy only built opteedir
-COPY --from=builder ${OPTEE_DIR} ${OPTEE_DIR}
+#copy only the required dir
+COPY --from=builder ${OPTEE_DIR}/optee_os/out ${OPTEE_DIR}/optee_os/out
+COPY --from=builder ${OPTEE_DIR}/build/zynqmp.mk ${OPTEE_DIR}/build/zynqmp.mk
+COPY --from=builder ${OPTEE_DIR}/edk2/Build ${OPTEE_DIR}/edk2/Build
+COPY --from=builder ${OPTEE_DIR}/edk2/NetworkPkg ${OPTEE_DIR}/edk2/NetworkPkg
+COPY --from=builder ${OPTEE_DIR}/linux/arch ${OPTEE_DIR}/linux/arch
+COPY --from=builder ${OPTEE_DIR}/out ${OPTEE_DIR}/out
+COPY --from=builder ${OPTEE_DIR}/out-br ${OPTEE_DIR}/out-br
+COPY --from=builder ${OPTEE_DIR}/qemu ${OPTEE_DIR}/qemu
+COPY --from=builder ${OPTEE_DIR}/trusted-firmware-a/build ${OPTEE_DIR}/trusted-firmware-a/build
 
 # Set to user dir 
 WORKDIR $USER_DIR
