--- a/optee/3.10.0/Dockerfile
+++ b/optee/3.10.0/Dockerfile
@@ -57,7 +57,10 @@ COPY --from=builder ${OPTEE_DIR}/edk2/NetworkPkg ${OPTEE_DIR}/edk2/NetworkPkg
 COPY --from=builder ${OPTEE_DIR}/linux/arch ${OPTEE_DIR}/linux/arch
 COPY --from=builder ${OPTEE_DIR}/out ${OPTEE_DIR}/out
 COPY --from=builder ${OPTEE_DIR}/out-br ${OPTEE_DIR}/out-br
-COPY --from=builder ${OPTEE_DIR}/qemu ${OPTEE_DIR}/qemu
+COPY --from=builder ${OPTEE_DIR}/qemu/aarch64-softmmu ${OPTEE_DIR}/qemu/aarch64-softmmu
+COPY --from=builder ${OPTEE_DIR}/qemu/pc-bios ${OPTEE_DIR}/qemu/pc-bios
+COPY --from=builder ${OPTEE_DIR}/qemu/pc-bios ${OPTEE_DIR}/qemu/pc-bios
+COPY --from=builder ${OPTEE_DIR}/optee_client/public ${OPTEE_DIR}/optee_client/public
 COPY --from=builder ${OPTEE_DIR}/trusted-firmware-a/build ${OPTEE_DIR}/trusted-firmware-a/build
 RUN sudo ln -s ${TOOLCHAIN_DIR} ${OPTEE_DIR}/toolchains
 
