--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,17 @@
 variables:
     REPO: aistcpsec/tee-dev
 
+stages:
+    - docker
+    - trigger
+
 before_script:
     - docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PASSWD}
 
 tee-dev-sgx_2.10:
     tags:
         - fast-shells
+    stage: docker
     script:
         - docker pull aistcpsec/tee-distro-dev:x64-20.04
         - docker build --build-arg VERSION=2.10 --build-arg DEBUG_DATE=$(date +%s) --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:sgx-2.10 ./sgx/2.10
@@ -23,6 +28,7 @@ tee-dev-sgx_2.10:
 tee-dev-optee_3.10.0:
     tags:
         - fast-shells
+    stage: docker
     script:
         - docker pull aistcpsec/tee-distro-dev:arm64-20.04
         - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:optee-3.10.0 ./optee/3.10.0
@@ -31,7 +37,17 @@ tee-dev-optee_3.10.0:
 tee-dev-keystone_1.0.0:
     tags:
         - fast-shells
+    stage: docker
     script:
         - docker pull aistcpsec/tee-distro-dev:riscv-20.04
         - docker build --build-arg VERSION=v1.0.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:keystone-1.0.0 ./keystone/1.0.0
         - docker push ${REPO}:keystone-1.0.0
+
+trigger_docker-taref-dev:
+    variables:
+        TOKEN: 29d9f4acb972460d03f8bd22e76880
+    stage: trigger
+    tags:
+        - shell117
+    script:
+        - "curl -X POST --fail -F token=${TOKEN} -F ref=main https://192.168.100.100/api/v4/projects/132/trigger/pipeline"
