--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,13 +17,15 @@ tee-dev-sgx_2.10:
         - docker build --build-arg VERSION=2.10 --build-arg DEBUG_DATE=$(date +%s) --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:sgx-2.10 ./sgx/2.10
         - docker push ${REPO}:sgx-2.10
 
-# tee-dev-optee_3.9.0:
-#     tags:
-#         - fast-shells
-#     script:
-#         - docker pull aistcpsec/tee-distro-dev:arm64-20.04
-#         - docker build --build-arg VERSION=3.9.0 --build-arg DEBUG_DATE=$(date +%s) --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:optee-3.9.0 ./optee/3.9.0
-#         - docker push ${REPO}:optee-3.9.0
+tee-dev-optee_3.9.0:
+    only:
+        - todo # skip this ci
+    tags:
+        - fast-shells
+    script:
+        - docker pull aistcpsec/tee-distro-dev:arm64-20.04
+        - docker build --build-arg VERSION=3.9.0 --build-arg DEBUG_DATE=$(date +%s) --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:optee-3.9.0 ./optee/3.9.0
+        - docker push ${REPO}:optee-3.9.0
 
 tee-dev-optee_3.10.0:
     tags:
