--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,4 +53,4 @@ trigger_docker-taref-dev:
     tags:
         - shell117
     script:
-        - "curl -X POST --fail -F token=${TOKEN} -F ref=main https://192.168.100.100/api/v4/projects/132/trigger/pipeline"
+        - "curl -X POST --fail --retry 5 -F token=${TOKEN} -F ref=main -k https://192.168.100.100/api/v4/projects/132/trigger/pipeline"
