--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,16 @@ tee-dev-optee_3.10.0:
         - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:optee-3.10.0 ./optee/3.10.0
         - docker push ${REPO}:optee-3.10.0
 
+
+tee-dev-optee_3.10.0_rpi3:
+    tags:
+        - fast-shells
+    stage: docker
+    script:
+        - docker pull aistcpsec/tee-distro-dev:arm64-20.04
+        - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:optee-3.10.0_rpi3 ./optee/3.10.0_rpi3
+        - docker push ${REPO}:optee-3.10.0_rpi3
+
 tee-dev-keystone_1.0.0:
     tags:
         - fast-shells
