Updated the name of the xml file for rpi3

--- a/optee/3.10.0_rpi3/Dockerfile
+++ b/optee/3.10.0_rpi3/Dockerfile
@@ -26,7 +26,7 @@ ARG VERSION=
 
 # Get the source code for optee
 
-RUN repo init -u https://github.com/OP-TEE/manifest.git -m qemu_rpi3.xml -b ${VERSION}
+RUN repo init -u https://github.com/OP-TEE/manifest.git -m rpi3.xml -b ${VERSION}
 RUN repo sync -j4 --no-clone-bundle
 
 RUN sed -i '/MBEDTLS_ECDSA_C/a#define MBEDTLS_HMAC_DRBG_C' optee_os/lib/libmbedtls/include/mbedtls_config_uta.h
