Copied another directory in the build which contains uboot.env file

--- a/optee/3.10.0_rpi3/Dockerfile
+++ b/optee/3.10.0_rpi3/Dockerfile
@@ -56,6 +56,7 @@ ENV OPTEE_DIR=${USER_DIR}/optee
 #copy only the required dir
 COPY --from=builder ${OPTEE_DIR}/optee_os/out ${OPTEE_DIR}/optee_os/out
 COPY --from=builder ${OPTEE_DIR}/build/zynqmp.mk ${OPTEE_DIR}/build/zynqmp.mk
+COPY --from=builder ${OPTEE_DIR}/build/rpi3 ${OPTEE_DIR}/build/rpi3
 COPY --from=builder ${OPTEE_DIR}/linux/arch ${OPTEE_DIR}/linux/arch
 COPY --from=builder ${OPTEE_DIR}/out ${OPTEE_DIR}/out
 COPY --from=builder ${OPTEE_DIR}/out-br ${OPTEE_DIR}/out-br
