--- a/optee/3.9.0/Dockerfile
+++ b/optee/3.9.0/Dockerfile
@@ -1,15 +1,14 @@
 FROM aistcpsec/tee-distro-dev:arm64-20.04 as builder
+# TO aistcpsec/tee-dev:optee-3.9.0
 
 # Make sure the following command run as build-user
 USER build-user
 
 # Set the required env variables
 ENV USER_DIR=/home/user
-ENV OPTEE_DIR=${USER_DIR}/optee
 #ENV FORCE_UNSAFE_CONFIGURE=1
 
-RUN mkdir -p ${OPTEE_DIR}
-WORKDIR $USER_DIR
+WORKDIR ${USER_DIR}
 
 # Install Android repo
 RUN git config --global user.name "dummy" && \
@@ -20,30 +19,36 @@ RUN git config --global user.name "dummy" && \
   chmod a+x ${USER_DIR}/bin/repo
 ENV PATH=${PATH}:${USER_DIR}/bin
 
-# To get the build args version information
-ARG VERSION=
-
 # This is for debugging purpose. This will show the output of the following command on console
-#ARG DEBUG_DATE=
+#ARG DEBUG_DATE
 #RUN echo ${DEBUG_DATE} > date
 
 # For fetching build-optee-repo.git
-ARG CI_JOB_TOKEN=
+ARG CI_JOB_TOKEN
 RUN git config --global user.name gitlab-ci-token
 RUN git config --global http.sslVerify false
 RUN git config --global credential.helper 'store --file ~/.git-credentials'
 RUN echo https://gitlab-ci-token:${CI_JOB_TOKEN}@192.168.100.100:443 >> ~/.git-credentials
 RUN echo https://gitlab-ci-token:${CI_JOB_TOKEN}@192.168.100.100 >> ~/.git-credentials
 
-#RUN cat ~/.gitconfig
-#RUN cat ~/.git-credentials
+RUN cat ~/.gitconfig
+RUN cat ~/.git-credentials
 
-# downlaod
+# Start optee 
+ENV OPTEE_DIR=${USER_DIR}/optee
+#RUN mkdir -p ${OPTEE_DIR}
 WORKDIR ${OPTEE_DIR}
-RUN \
-  CACHE_TAG=0; \
-  repo init --depth=1 -u https://192.168.100.100/rinkai/build-optee-repo.git -m qemu_v8-teep.xml 1> /dev/null && \
-  repo sync -j4 --force-sync --no-clone-bundle --no-tags 1> /dev/null
+
+# To get the build args version information
+ARG VERSION
+
+# Get the source code for optee
+RUN repo --trace init --depth=1 -u https://github.com/OP-TEE/manifest.git -m qemu_v8.xml -b ${VERSION}
+RUN repo sync -j4 --no-clone-bundle --no-tags 1> /dev/null
+
+# Customize optee, enable some crypto algorithms
+RUN sed -i '/MBEDTLS_ECDSA_C/a#define MBEDTLS_HMAC_DRBG_C' optee_os/lib/libmbedtls/include/mbedtls_config_uta.h
+RUN sed -i '/MBEDTLS_ECDSA_C/a#define MBEDTLS_ECDSA_DETERMINISTIC' optee_os/lib/libmbedtls/include/mbedtls_config_uta.h
 
 # Build optee
 ENV OPT_ARM_TC=/opt/arm-tc
@@ -64,8 +69,19 @@ USER build-user
 # set the env variables
 ENV OPTEE_DIR=${USER_DIR}/optee
 
-#copy only built opteedir
-COPY --from=builder ${OPTEE_DIR} ${OPTEE_DIR}
+#copy only the required dir
+COPY --from=builder ${OPTEE_DIR}/optee_os/out ${OPTEE_DIR}/optee_os/out
+COPY --from=builder ${OPTEE_DIR}/build/zynqmp.mk ${OPTEE_DIR}/build/zynqmp.mk
+COPY --from=builder ${OPTEE_DIR}/edk2/Build ${OPTEE_DIR}/edk2/Build
+COPY --from=builder ${OPTEE_DIR}/edk2/NetworkPkg ${OPTEE_DIR}/edk2/NetworkPkg
+COPY --from=builder ${OPTEE_DIR}/linux/arch ${OPTEE_DIR}/linux/arch
+COPY --from=builder ${OPTEE_DIR}/out ${OPTEE_DIR}/out
+COPY --from=builder ${OPTEE_DIR}/out-br ${OPTEE_DIR}/out-br
+COPY --from=builder ${OPTEE_DIR}/qemu/aarch64-softmmu ${OPTEE_DIR}/qemu/aarch64-softmmu
+COPY --from=builder ${OPTEE_DIR}/qemu/pc-bios ${OPTEE_DIR}/qemu/pc-bios
+COPY --from=builder ${OPTEE_DIR}/optee_client/public ${OPTEE_DIR}/optee_client/public
+COPY --from=builder ${OPTEE_DIR}/trusted-firmware-a/build ${OPTEE_DIR}/trusted-firmware-a/build
+RUN sudo ln -s ${TOOLCHAIN_DIR} ${OPTEE_DIR}/toolchains
 
 # Set to user dir
 WORKDIR $USER_DIR
