Added the option to unzip and copy the optee binaries into rootfs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,16 @@ tee-dev-optee-3.10.0_rpi3_netboot_bootloader:
         - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:optee-3.10.0_rpi3_netboot_bootloader ./optee/3.10.0_rpi3_netboot_bootloader
         - docker push ${REPO}:optee-3.10.0_rpi3_netboot_bootloader
 
+tee-dev-optee-3.10.0_rpi3_netboot_nfs:
+    tags:
+        - shell117
+    stage: docker
+    script:
+        - docker pull aistcpsec/tee-distro-dev:rootfs-arm64-ubuntu-20.04-tar
+        - docker pull aistcpsec/tee-dev:optee-3.10.0_rpi3
+        - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:optee-3.10.0_rpi3_netboot_nfs ./optee/3.10.0_rpi3_netboot_nfs
+        # - docker push ${REPO}:optee-3.10.0_rpi3_netboot_nfs
+
 tee-dev-keystone_1.0.0:
     tags:
         - fast-shells
