Using script for customizing rootfs

--- a/optee/3.10.0_rpi3_netboot_nfs/Dockerfile
+++ b/optee/3.10.0_rpi3_netboot_nfs/Dockerfile
@@ -34,15 +34,12 @@ RUN sudo cp etc/init.d/S30optee ${ROOTFS_EXT_DIR}/etc/init.d/ && \
     sudo cp usr/sbin/tee-supplicant ${ROOTFS_EXT_DIR}/usr/sbin/
 
 # Copy the tee-supplicant service
-COPY /tmp/tee-supplicant.service /tmp/
-RUN sudo cp /tmp/tee-supplicant.service ${ROOTFS_EXT_DIR}/etc/systemd/system/
+COPY /mnt/tee-supplicant.service ${ROOTFS_EXT_DIR}/etc/systemd/system/
+RUN sudo chmod 644 ${ROOTFS_EXT_DIR}/etc/systemd/system/
 
 # Removed the existing tar file
 RUN sudo rm -rf arm64-20.04-rootfs.tar.xz
 
 # Create a new tar file and move to root directory
-RUN sudo tar -cvf arm64-20.04-rootfs-optee.tar.xz arm64-20.04-rootfs && sudo mv arm64-20.04-rootfs-optee.tar.xz /
-
-
-
+RUN sudo tar -cvf arm64-20.04-rootfs-optee.tar.xz --exclude="dev,proc,sys" arm64-20.04-rootfs && sudo mv arm64-20.04-rootfs-optee.tar.xz /
 
