--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,9 +70,9 @@ tee-dev-optee-3.10.0_rpi3_netboot_nfs:
         - docker push ${REPO}:optee-3.10.0_rpi3_netboot_nfs
         - for i in {1..5}; do docker stop $NETBOOT_CONT_NME || true; done 
         - docker rm $NETBOOT_CONT_NME || true
-        - docker run --cap-add=SYS_CHROOT --name $NETBOOT_CONT_NME -itd ${REPO}:optee-3.10.0_rpi3_netboot_nfs
-        - docker exec --privileged $NETBOOT_CONT_NME /bin/bash -c "sudo ldconfig /usr/lib"
-        - docker exec --privileged $NETBOOT_CONT_NME /bin/bash -c "sudo systemctl enable tee-supplicant.service"
+        - docker run --cap-add=SYS_CHROOT --name $NETBOOT_CONT_NME -itd -v $(pwd)/optee/3.10.0_rpi3_netboot_nfs:/mnt ${REPO}:optee-3.10.0_rpi3_netboot_nfs /bin/bash -c "/mnt/customize-rootfs.sh"
+          #        - docker exec --privileged $NETBOOT_CONT_NME /bin/bash -c "sudo ldconfig /usr/lib"
+          #        - docker exec --privileged $NETBOOT_CONT_NME /bin/bash -c "sudo systemctl enable tee-supplicant.service"
 #        - docker wait $NETBOOT_CONT_NME
         - docker cp $NETBOOT_CONT_NME:/${ROOTFS_FILE} $CI_PROJECT_DIR/${ROOTFS_FILE}
         - for i in {1..5}; do docker stop $NETBOOT_CONT_NME || true; done
